--- a/loleaflet/admin/admin.html
+++ b/loleaflet/admin/admin.html
@@ -56,9 +56,11 @@
       <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-sidebar">
-            <li class="active"><a href="#"><script>document.write(l10nstrings.strOverview)</script> <span class="sr-only"><script>document.write(l10nstrings.strCurrent)</script></span></a></li>
+            <li class="active"><a href="#"><script>document.write(l10nstrings.strOverview);</script> <span class="sr-only"><script>document.write(l10nstrings.strCurrent)</script></span></a></li>
             <li><a href="adminAnalytics.html"><script>document.write(l10nstrings.strAnalytics)</script></a></li>
-            <li><a href="adminHistory.html"><script>document.write(l10nstrings.strHistory)</script></a></li>
+            <li><a href="adminViewLog.html">檢視日誌</a></li>
+            <li><a href="adminConfigSettings.html">系統設定</script></a></li>
+            <li><a href="adminPermissionSettings.html">界面設定</a></li>
           </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
