--- a/loleaflet/admin/adminPermissionSettings.html
+++ b/loleaflet/admin/adminPermissionSettings.html
@@ -16,6 +16,52 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <link rel="localizations" href="%SERVICE_ROOT%/loleaflet/%VERSION%/l10n/admin-localizations.json" type="application/vnd.oftn.l10n+json"/>
+    <style>
+      .material-switch > input[type="checkbox"] {
+    display: none;   
+}
+
+.material-switch > label {
+    cursor: pointer;
+    height: 0px;
+    position: relative; 
+    width: 32px;  
+}
+
+.material-switch > label::before {
+    background: rgb(0, 0, 0);
+    box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 0.5);
+    border-radius: 8px;
+    content: '';
+    height: 12px;
+    margin-top: -8px;
+    position:absolute;
+    opacity: 0.3;
+    transition: all 0.1s ease-in-out;
+    width: 32px;
+}
+.material-switch > label::after {
+    background: rgb(255, 255, 255);
+    border-radius: 16px;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+    content: '';
+    height: 16px;
+    left: -4px;
+    margin-top: -6px;
+    position: absolute;
+    top: -4px;
+    transition: all 0.1s ease-in-out;
+    width: 16px;
+}
+.material-switch > input[type="checkbox"]:checked + label::before {
+    background: inherit;
+    opacity: 0.5;
+}
+.material-switch > input[type="checkbox"]:checked + label::after {
+    background: inherit;
+    left: 20px;
+}
+  </style>
   </head>
   <body>
     <script src="%SERVICE_ROOT%/loleaflet/%VERSION%/admin-bundle.js"></script>
@@ -23,6 +69,7 @@
     <script>if (typeof brandProductName !== 'undefined') {l10nstrings.strProductName = brandProductName}</script>
     <script>document.title = l10nstrings.strProductName + ' - ' + l10nstrings.strAdminConsole</script>
     <script>
+        var editMode = false;
         if (window.location.protocol == "https:") {
            host = 'wss://' + window.location.host + '%SERVICE_ROOT%/lool/adminws/'
         }
@@ -30,7 +77,7 @@
            host = 'ws://' + window.location.host + '%SERVICE_ROOT%/lool/adminws/'
         }
 
-        Admin.PermissionSettings(host)
+        var permission = Admin.PermissionSettings(host)
     </script>
 
     <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -78,7 +125,12 @@
             </li>
             <li>
               <a href="#presentationTab" data-toggle="tab">
-                <h4>簡報文件</script></h4>
+                <h4>簡報文件</h4>
+              </a>
+            </li>
+            <li>
+              <a href="#toolbarTab" data-toggle="tab">
+                <h4>工具列</h4>
               </a>
             </li>
           </ul>
@@ -86,20 +138,119 @@
             <!-- 文字文件設定 -->
             <div id="textTab" class="active tab-pane">
               <input type="hidden" id="text.showfor">
+              <table id='text_showfor' class="table table-bordered table-hover">
+                <thead>
+                  <tr class="bg-primary">
+                    <th>功能名稱</th><th>Edit</th><th>View</th><th>Readonly</th><th>說明</th>
+                  </tr>
+                </thead>
+                <tbody id="text_showfor_list"></tbody>
+                <tfoot>
+                  <tr>
+                    <td colspan="5" class="text-right"><button type="button" class="btn btn-primary" id="text_showfor_add">新增文字文件選單項目</button></td>
+                  </tr>
+                </tfoot>
+              </table>
             </div>
             <!-- 試算表設定 -->
             <div id="spreadsheetTab" class="tab-pane">
               <input type="hidden" id="spreadsheet.showfor">
+              <table id='spreadsheet_showfor' class="table table-bordered table-hover">
+                <thead>
+                  <tr class="bg-success">
+                    <th>功能名稱</th><th>Edit</th><th>View</th><th>Readonly</th><th>說明</th>
+                  </tr>
+                </thead>
+                <tbody id="spreadsheet_showfor_list"></tbody>
+                <tfoot>
+                  <tr>
+                    <td colspan="5" class="text-right"><button type="button" class="btn btn-primary" id="spreadsheet_showfor_add">新增試算表選單項目</button></td>
+                  </tr>
+                </tfoot>
+              </table>
             </div>
             <!-- 簡報設定 -->
             <div id="presentationTab" class="tab-pane">
               <input type="hidden" id="presentation.showfor">
+              <table id='spreadsheet_showfor' class="table table-bordered table-hover">
+                <thead>
+                  <tr class="bg-warning">
+                    <th>功能名稱</th><th>Edit</th><th>View</th><th>Readonly</th><th>說明</th>
+                  </tr>
+                </thead>
+                <tbody id="presentation_showfor_list"></tbody>
+                <tfoot>
+                  <tr>
+                    <td colspan="5" class="text-right"><button type="button" class="btn btn-primary" id="presentation_showfor_add">新增簡報選單項目</button></td>
+                  </tr>
+                </tfoot>
+              </table>
+            </div>
+            <!-- 工具列設定 -->
+            <div id="toolbarTab" class="tab-pane">
+              <input type="hidden" id="toolbar.showfor">
+              <table id='toolbar_showfor' class="table table-bordered table-hover">
+                <thead>
+                  <tr class="bg-warning">
+                    <th>功能名稱</th><th>Edit</th><th>說明</th>
+                  </tr>
+                </thead>
+                <tbody id="toolbar_showfor_list"></tbody>
+                <tfoot>
+                  <tr>
+                    <td colspan="5" class="text-right"><button type="button" class="btn btn-primary" id="toolbar_showfor_add">新增工具列項目</button></td>
+                  </tr>
+                </tfoot>
+              </table>
             </div>
           </div>
           </form>
+          <div><button class="btn btn-info pull-right" id="saveConfig" disabled><strong>更新界面設定</strong></button></div>
         </div>
       </div>
     </div>
 <!--%FOOTER%-->
+<script>
+$(document).ready(function()
+{
+  $('#saveConfig').attr('disabled', false)
+  .click( function ()
+  {
+    vex.dialog.confirm({
+      message: '更新界面設定？',
+      buttons: [
+        $.extend({}, vex.dialog.buttons.YES, { text: '確定' }),
+        $.extend({}, vex.dialog.buttons.NO, { text: '離開' })
+      ],
+      callback: function(value)
+      {
+        if (value)
+        {
+          $('#saveConfig').attr('disabled', true);
+          var keys = [{key : 'text.showfor', containerId : 'text_showfor_list'},
+                      {key : 'spreadsheet.showfor', containerId : 'spreadsheet_showfor_list'},
+                      {key : 'presentation.showfor', containerId : 'presentation_showfor_list'},
+                      {key : 'toolbar.showfor', containerId : 'toolbar_showfor_list'}];
+          var i;
+          var json = {};
+          for (i = 0; i < keys.length ; i ++)
+          {
+            json[keys[i].key] = permission.getArray(keys[i].key, keys[i].containerId);
+          }
+          permission.setPermission(JSON.stringify(json));
+        }
+      }
+	  });
+  });
+
+  if (!editMode)
+  {
+    $('#text_showfor_add').hide();
+    $('#spreadsheet_showfor_add').hide();
+    $('#presentation_showfor_add').hide();
+    $('#toolbar_showfor_add').hide();
+  }
+})
+</script>
   </body>
 </html>
