--- a/loleaflet/admin/adminPermissionSettings.html
+++ b/loleaflet/admin/adminPermissionSettings.html
@@ -91,11 +91,11 @@
           </button>
           <a class="navbar-brand" href="#"><script>document.write(l10nstrings.strProductName + ' - ' + l10nstrings.strAdminConsole)</script></a>
         </div>
-        <div id="navbar" class="navbar-collapse collapse">
+        <!--div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="adminSettings.html"><script>document.write(l10nstrings.strSettings)</script></a></li>
           </ul>
-        </div>
+        </div-->
       </div>
     </nav>
 
