--- a/loleaflet/admin/adminViewLog.html
+++ b/loleaflet/admin/adminViewLog.html
@@ -44,11 +44,11 @@
           </button>
           <a class="navbar-brand" href="#"><script>document.write(l10nstrings.strProductName + ' - ' + l10nstrings.strAdminConsole)</script></a>
         </div>
-        <div id="navbar" class="navbar-collapse collapse">
+        <!--div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="adminSettings.html"><script>document.write(l10nstrings.strSettings)</script></a></li>
           </ul>
-        </div>
+        </div-->
       </div>
     </nav>
 
@@ -64,7 +64,8 @@
           </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-          <h2 class="page-header">待完成</h2>
+          <h4 class="page-header">日誌內容<button class="btn btn-primary pull-right" id="Pause"><strong>暫停</strong></button></h4>
+          <pre id="log" style="width:100%; height:75vh; background-color:#000000;color:#ffffff;"></pre>
         </div>
       </div>
     </div>
