--- a/loleaflet/admin/adminHistory.html
+++ b/loleaflet/admin/adminHistory.html
@@ -31,7 +31,8 @@
            host = 'ws://' + window.location.host + '%SERVICE_ROOT%/lool/adminws/'
         }
 
-        Admin.History(host)
+        Admin.History(host);
+        Admin.GlobalFunction(host);
     </script>
 
 <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -46,9 +47,7 @@
           <a class="navbar-brand" href="#"><script>document.write(l10nstrings.strProductName + ' - ' + l10nstrings.strAdminConsole)</script></a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="adminSettings.html"><script>document.write(l10nstrings.strSettings)</script></a></li>
-          </ul>
+          <ul id="navbar-menu" class="nav navbar-nav navbar-right"></ul>
         </div>
       </div>
     </nav>
