--- a/loleaflet/admin/adminPermissionSettings.html
+++ b/loleaflet/admin/adminPermissionSettings.html
@@ -77,7 +77,8 @@
            host = 'ws://' + window.location.host + '%SERVICE_ROOT%/lool/adminws/'
         }
 
-        var permission = Admin.PermissionSettings(host)
+        var permission = Admin.PermissionSettings(host);
+        Admin.GlobalFunction(host);
     </script>
 
     <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -91,11 +92,9 @@
           </button>
           <a class="navbar-brand" href="#"><script>document.write(l10nstrings.strProductName + ' - ' + l10nstrings.strAdminConsole)</script></a>
         </div>
-        <!--div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="adminSettings.html"><script>document.write(l10nstrings.strSettings)</script></a></li>
-          </ul>
-        </div-->
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul id="navbar-menu" class="nav navbar-nav navbar-right"></ul>
+        </div>
       </div>
     </nav>
 
