--- a/loleaflet/admin/admin.html
+++ b/loleaflet/admin/admin.html
@@ -43,7 +43,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#"><script>document.write(l10nstrings.strProductName + ' - ' + l10nstrings.strAdminConsole)</script></a>
+          <a class="navbar-brand" href="#"><script>document.write(l10nstrings.strProductName + ' - ' + l10nstrings.strAdminConsole)</script><br><small id="version"></small><small id="lokit"></small></a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul id="navbar-menu" class="nav navbar-nav navbar-right"></ul>
