vex theme 由 plain 改成 default

--- a/loleaflet/debug/document/admin.html
+++ b/loleaflet/debug/document/admin.html
@@ -20,7 +20,7 @@
     <link href="../../dist/bootstrap/dashboard.css" rel="stylesheet">
 
     <link rel="stylesheet" href="../../dist/dialog/vex.css" />
-    <link rel="stylesheet" href="../../dist/dialog/vex-theme-plain.css" />
+    <link rel="stylesheet" href="../../dist/dialog/vex-theme-default.css" />
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -34,7 +34,7 @@
     <script>window.jQuery || document.write('<script src="../../dist/bootstrap/assets/js/vendor/jquery.min.js"><\/script>')</script>
     <script src="../../dist/dialog/vex.combined.min.js"></script>
     <script src="../../dist/admin/admin-src.js"></script>
-    <script>vex.defaultOptions.className = 'vex-theme-plain';</script>
+    <script>vex.defaultOptions.className = 'vex-theme-default';</script>
     <script>
 
 	var host = 'wss://' + window.location.host + '%SERVICE_ROOT%/lool/adminws/';
