--- a/loleaflet/spec/tilebench.html
+++ b/loleaflet/spec/tilebench.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="../node_modules/mocha/mocha.css">
 	<link rel="stylesheet" type="text/css" href="../dist/leaflet.css">
 	<link rel="stylesheet" type="text/css" href="../dist/dialog/vex.css" />
-	<link rel="stylesheet" type="text/css" href="../dist/dialog/vex-theme-plain.css" />
+	<link rel="stylesheet" type="text/css" href="../dist/dialog/vex-theme-default.css" />
 </head>
 <body>
 	<div id="mocha"></div>
@@ -16,7 +16,7 @@
 	<script type="text/javascript" src="../node_modules/happen/happen.js"></script>
 	<script type="text/javascript" src="sinon.js"></script>
 	<script src="../dist/dialog/vex.combined.min.js"></script>
-	<script>vex.defaultOptions.className = 'vex-theme-plain';</script>
+	<script>vex.defaultOptions.className = 'vex-theme-default';</script>
 
 	<!-- source files -->
 	<script type="text/javascript" src="../dist/leaflet-src.js"></script>
