--- a/loleaflet/debug/document/loleaflet.html
+++ b/loleaflet/debug/document/loleaflet.html
@@ -19,7 +19,7 @@
 <link rel="stylesheet" href="/loleaflet/%VERSION%/scrollbar/jquery.mCustomScrollbar.css">
 <link rel="stylesheet" href="/loleaflet/%VERSION%/contextMenu/jquery.contextMenu.css">
 <link rel="stylesheet" href="/loleaflet/%VERSION%/dialog/vex.css" />
-<link rel="stylesheet" href="/loleaflet/%VERSION%/dialog/vex-theme-plain.css" />
+<link rel="stylesheet" href="/loleaflet/%VERSION%/dialog/vex-theme-default.css" />
 <link rel="stylesheet" href="/loleaflet/%VERSION%/dialog/vex-theme-bottom-right-corner.css" />
 <link rel="stylesheet" href="/loleaflet/%VERSION%/toolbar/w2ui.min.css" />
 <link rel="stylesheet" href="/loleaflet/%VERSION%/toolbar/select2.min.css" />
@@ -59,7 +59,7 @@
     <script src="/loleaflet/%VERSION%/smartmenus/jquery.smartmenus.js"></script>
     <script src="/loleaflet/%VERSION%/dialog/vex.combined.min.js"></script>
     <script src="/loleaflet/%VERSION%/branding.js"></script> <!-- logo onclick handler -->
-    <script>vex.defaultOptions.className = 'vex-theme-plain';</script>
+    <script>vex.defaultOptions.className = 'vex-theme-default';</script>
     <script src="/loleaflet/%VERSION%/errormessages.js"></script>
 
     <!--The "controls" div holds map controls such as the Zoom button and
