--- a/loleaflet/spec/loadtest.html
+++ b/loleaflet/spec/loadtest.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="../dist/scrollbar/jquery.mCustomScrollbar.css">
 	<link rel="stylesheet" type="text/css" href="../dist/contextMenu/jquery.contextMenu.css">
 	<link rel="stylesheet" type="text/css" href="../dist/dialog/vex.css" />
-	<link rel="stylesheet" type="text/css" href="../dist/dialog/vex-theme-plain.css" />
+	<link rel="stylesheet" type="text/css" href="../dist/dialog/vex-theme-default.css" />
 </head>
 <body>
 	<script>var _ = function (string) {return string.toLocaleString();};</script>
@@ -22,7 +22,7 @@
         <script src="../dist/contextMenu/jquery.contextMenu.js"></script>
         <script src="../dist/contextMenu/jquery.ui.position.min.js"></script>
 	<script src="../dist/dialog/vex.combined.min.js"></script>
-	<script>vex.defaultOptions.className = 'vex-theme-plain';</script>
+	<script>vex.defaultOptions.className = 'vex-theme-default';</script>
 
 	<!-- source files -->
 	<script type="text/javascript" src="../build/deps.js"></script>
