完成後台管理「軟體升級功能」

--- a/loleaflet/admin/adminPermissionSettings.html
+++ b/loleaflet/admin/adminPermissionSettings.html
@@ -107,6 +107,7 @@
             <li><a href="adminViewLog.html">檢視日誌</a></li>
             <li><a href="adminConfigSettings.html">系統設定</script></a></li>
             <li class="active"><a href="adminPermissionSettings.html">界面設定</a></li>
+            <li><a href="adminSoftwareUpgrade.html">軟體升級</a></li>
           </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
