--- a/loleaflet/admin/adminConfigSettings.html
+++ b/loleaflet/admin/adminConfigSettings.html
@@ -104,6 +104,7 @@
         <li><a href="adminViewLog.html">檢視日誌</a></li>
         <li class="active"><a href="adminConfigSettings.html">系統設定</script></a></li>
         <li><a href="adminPermissionSettings.html">界面設定</a></li>
+        <li><a href="adminSoftwareUpgrade.html">軟體升級</a></li>
       </ul>
     </div>
 
