--- a/loleaflet/admin/adminSoftwareUpgrade.html
+++ b/loleaflet/admin/adminSoftwareUpgrade.html
@@ -70,7 +70,7 @@
               <div class="input-group">
                 <label class="input-group-btn">
                   <span class="btn btn-primary">
-                    瀏覽檔案<input type="file" id="filename" style="display: none;">
+                    瀏覽檔案(.zip 或 .tar.gz)<input type="file" id="filename" style="display: none;">
                   </span>
                 </label>
                 <input type="text" class="form-control" id="filename-disp" readonly>
