後台管理→軟體升級上傳檔案類型，新增可上傳 rpm 共有 zip、tar.gz、rpm 三種類型

--- a/loleaflet/admin/adminSoftwareUpgrade.html
+++ b/loleaflet/admin/adminSoftwareUpgrade.html
@@ -70,7 +70,7 @@
               <div class="input-group">
                 <label class="input-group-btn">
                   <span class="btn btn-primary">
-                    瀏覽檔案(.zip 或 .tar.gz)<input type="file" id="filename" style="display: none;">
+                    瀏覽檔案(.rpm/.zip/.tar.gz)<input type="file" id="filename" style="display: none;" accept=".rpm,.zip, .tar.gz">
                   </span>
                 </label>
                 <input type="text" class="form-control" id="filename-disp" readonly>
