--- a/loleaflet/admin/adminConfigSettings.html
+++ b/loleaflet/admin/adminConfigSettings.html
@@ -153,6 +153,13 @@
                 </div>
               </div>
               <div class="form-group">
+                <label class="text-right col-md-3" for="per_document.always_save_on_exit">離開編輯時，即使未修改也強制存檔</label>
+                <div class="col-md-9 material-switch">
+                  <input type="checkbox" class="form-control" id="per_document.always_save_on_exit">
+                  <label for="per_document.always_save_on_exit" class="label-success"></label>
+                </div>
+              </div>
+              <div class="form-group">
                 <label class="control-label col-md-3" for="per_document.limit_file_size_mb">每個程序可寫入的檔案大小(單位:M)</label>
                 <div class="col-md-9">
                   <input type="number" class="form-control" id="per_document.limit_file_size_mb" title="0:表示無限制">
