新增 convert-to 啟用/關閉功能
1. XML 設定檔新增 convert_to 設定，預設 false
2. 後台管理加入啟用/關閉設定

--- a/loleaflet/admin/adminConfigSettings.html
+++ b/loleaflet/admin/adminConfigSettings.html
@@ -134,6 +134,13 @@
                   <input type="text" class="form-control" id="loleaflet_html">
                 </div>
               </div>
+              <div class="form-group">
+                <label class="text-right col-md-3" for="convert_to">啟用轉檔功能</label>
+                <div class="col-md-9  material-switch">
+                  <input type="checkbox" class="form-control" id="convert_to">
+                  <label for="convert_to" class="label-success"></label>
+                </div>
+              </div>
             </div>
           </div>
           <!-- 文件編輯設定 -->
