實作模組管理網頁的後端解析架構
1. 透過 URL parameter 來決定模組的管理網頁解析路徑
2. 對 oxoolmodule 新增公共界面來存取網頁的檔案
3. 把外層的 div 從擴充 html 移到 adminBase 使排版一致化

--- a/loleaflet/admin/adminAnalytics.html
+++ b/loleaflet/admin/adminAnalytics.html
@@ -1,4 +1,4 @@
-{% block javascript %}
+{% BLOCK content %}
 <script>
     if (window.location.protocol == "https:") {
         host = 'wss://' + window.location.host + '%SERVICE_ROOT%/lool/adminws/'
@@ -8,50 +8,45 @@
     }
 
     Admin.Analytics(host);
-    Admin.GlobalFunction(host);
 </script>
-{% end block %}
-{% block content %}
-<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-    <ul class="nav nav-tabs">
-        <li class="active">
-            <a href="#memview" data-toggle="tab">
-                <h4><script>document.write(l10nstrings.strMemoryGraph)</script></h4>
-            </a>
-        </li>
-        <li>
-            <a href="#cpuview" data-toggle="tab">
-                <h4><script>document.write(l10nstrings.strCpuGraph)</script></h4>
-            </a>
-        </li>
-        <li>
-            <a href="#networkview" data-toggle="tab">
-                <h4><script>document.write(l10nstrings.strNetGraph)</script></h4>
-            </a>
-        </li>
-    </ul>
-    <div class="tab-content graph-content">
-        <div id="memview" class="active tab-pane">
-            <div class="graph-container">
-                <div>
-                    <svg id="MemVisualisation" width="1010" height="510"></svg>
-                </div>
+<ul class="nav nav-tabs">
+    <li class="active">
+        <a href="#memview" data-toggle="tab">
+            <h4><script>document.write(l10nstrings.strMemoryGraph)</script></h4>
+        </a>
+    </li>
+    <li>
+        <a href="#cpuview" data-toggle="tab">
+            <h4><script>document.write(l10nstrings.strCpuGraph)</script></h4>
+        </a>
+    </li>
+    <li>
+        <a href="#networkview" data-toggle="tab">
+            <h4><script>document.write(l10nstrings.strNetGraph)</script></h4>
+        </a>
+    </li>
+</ul>
+<div class="tab-content graph-content">
+    <div id="memview" class="active tab-pane">
+        <div class="graph-container">
+            <div>
+                <svg id="MemVisualisation" width="1010" height="510"></svg>
             </div>
         </div>
-        <div id="cpuview" class="tab-pane">
-            <div class="graph-container">
-                <div>
-                    <svg id="CpuVisualisation" width="1010" height="510"></svg>
-                </div>
+    </div>
+    <div id="cpuview" class="tab-pane">
+        <div class="graph-container">
+            <div>
+                <svg id="CpuVisualisation" width="1010" height="510"></svg>
             </div>
         </div>
-        <div id="networkview" class="tab-pane">
-            <div class="graph-container">
-                <div>
-                    <svg id="NetVisualisation" width="1010" height="510"></svg>
-                </div>
+    </div>
+    <div id="networkview" class="tab-pane">
+        <div class="graph-container">
+            <div>
+                <svg id="NetVisualisation" width="1010" height="510"></svg>
             </div>
         </div>
     </div>
 </div>
-{% end block %}
+{% END BLOCK %}
