--- a/loleaflet/admin/admin.html
+++ b/loleaflet/admin/admin.html
@@ -1,4 +1,4 @@
-{% block javascript %}
+{% BLOCK content %}
 <script>
     if (window.location.protocol == "https:") {
         var host = 'wss://' + window.location.host + '%SERVICE_ROOT%/lool/adminws/';
@@ -8,85 +8,82 @@
     }
 
     Admin.Overview(host);
-    Admin.GlobalFunction(host);
 </script>
-{% end block %}
-{% block content %}
-<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-    <h1 class="page-header"><script>document.write(l10nstrings.strDashboard)</script></h1>
+<h1 class="page-header">
+    <script>document.write(l10nstrings.strDashboard)</script>
+</h1>
 
-        <div class="row placeholders">
-            <div class="col-xs-6 col-sm-2 placeholder">
-                <div class="main-data" id="active_users_count">0</div>
-                <h4><script>document.write(l10nstrings.strUsersOnline)</script></h4>
-            </div>
-            <div class="col-xs-6 col-sm-2 placeholder">
-                <div class="main-data" id="active_docs_count">0</div>
-                <h4><script>document.write(l10nstrings.strDocumentsOpened)</script></h4>
-            </div>
-            <div class="col-xs-6 col-sm-2 placeholder">
-                <div class="main-data" id="mem_consumed">0</div>
-                <h4><script>document.write(l10nstrings.strMemoryConsumed)</script></h4>
-            </div>
-            <div class="col-xs-6 col-sm-2 placeholder">
-                <div class="main-data" id="sent_bytes">0</div>
-                <h4><script>document.write(l10nstrings.strSentBytes)</script></h4>
-            </div>
-            <div class="col-xs-6 col-sm-2 placeholder">
-                <div class="main-data" id="recv_bytes">0</div>
-                <h4><script>document.write(l10nstrings.strRecvBytes)</script></h4>
-            </div>
-            <div class="col-xs-6 col-sm-2 placeholder">
-                <div class="main-data" id="uptime">0</div>
-                <h4><script>document.write(l10nstrings.strServerUptime)</script></h4>
-            </div>
-        </div>
-        <div class="container-fluid">
-            <ul class="nav nav-tabs">
-                <li class="active">
-                    <a href="#view1" data-toggle="tab">
-                        <h4><script>document.write(l10nstrings.strDocumentsOpened)</script></h4>
-                    </a>
-                </li>
-                <li>
-                    <a href="#view2" data-toggle="tab">
-                        <h4><script>document.write(l10nstrings.strUsersOnline)</script></h4>
-                    </a>
-                </li>
-            </ul>
-
-            <div class="tab-content">
-                <div id="view1" class="active tab-pane table-responsive">
-                    <table id="docview" class="table table-striped">
-                        <thead>
-                            <tr>
-                                <th><script>document.write(l10nstrings.strPid)</script></th>
-                                    <th><script>document.write(l10nstrings.strDocument)</script></th>
-                                        <th><script>document.write(l10nstrings.strNumberOfViews)</script></th>
-                                            <th><script>document.write(l10nstrings.strMemoryConsumed)</script></th>
-                                                <th><script>document.write(l10nstrings.strElapsedTime)</script></th>
-                                                    <th><script>document.write(l10nstrings.strIdleTime)</script></th>
-                                                        <th><script>document.write(l10nstrings.strModified)</script></th>
-                            </tr>
-                        </thead>
-                        <tbody id="doclist">
-                        </tbody>
-                    </table>
-                </div>
-
-                <div id="view2" class="tab-pane table-responsive">
-                    <table id="userview" class="tab-pane table table-striped">
-                        <thead>
-                            <tr>
-                                <th><script>document.write(l10nstrings.strUserName)</script></th>
-                                    <th><script>document.write(l10nstrings.strDocumentNumber)</script></th>
-                            </tr>
-                        </thead>
-                        <tbody id="userlist">
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </div>
+<div class="row placeholders">
+    <div class="col-xs-6 col-sm-2 placeholder">
+        <div class="main-data" id="active_users_count">0</div>
+        <h4><script>document.write(l10nstrings.strUsersOnline)</script></h4>
+    </div>
+    <div class="col-xs-6 col-sm-2 placeholder">
+        <div class="main-data" id="active_docs_count">0</div>
+        <h4><script>document.write(l10nstrings.strDocumentsOpened)</script></h4>
+    </div>
+    <div class="col-xs-6 col-sm-2 placeholder">
+        <div class="main-data" id="mem_consumed">0</div>
+        <h4><script>document.write(l10nstrings.strMemoryConsumed)</script></h4>
+    </div>
+    <div class="col-xs-6 col-sm-2 placeholder">
+        <div class="main-data" id="sent_bytes">0</div>
+        <h4><script>document.write(l10nstrings.strSentBytes)</script></h4>
+    </div>
+    <div class="col-xs-6 col-sm-2 placeholder">
+        <div class="main-data" id="recv_bytes">0</div>
+        <h4><script>document.write(l10nstrings.strRecvBytes)</script></h4>
+    </div>
+    <div class="col-xs-6 col-sm-2 placeholder">
+        <div class="main-data" id="uptime">0</div>
+        <h4><script>document.write(l10nstrings.strServerUptime)</script></h4>
+    </div>
 </div>
-{% end block %}
+<div class="container-fluid">
+    <ul class="nav nav-tabs">
+        <li class="active">
+            <a href="#view1" data-toggle="tab">
+                <h4><script>document.write(l10nstrings.strDocumentsOpened)</script></h4>
+            </a>
+        </li>
+        <li>
+            <a href="#view2" data-toggle="tab">
+                <h4><script>document.write(l10nstrings.strUsersOnline)</script></h4>
+            </a>
+        </li>
+    </ul>
+
+    <div class="tab-content">
+        <div id="view1" class="active tab-pane table-responsive">
+            <table id="docview" class="table table-striped">
+                <thead>
+                    <tr>
+                        <th><script>document.write(l10nstrings.strPid)</script></th>
+                            <th><script>document.write(l10nstrings.strDocument)</script></th>
+                                <th><script>document.write(l10nstrings.strNumberOfViews)</script></th>
+                                    <th><script>document.write(l10nstrings.strMemoryConsumed)</script></th>
+                                        <th><script>document.write(l10nstrings.strElapsedTime)</script></th>
+                                            <th><script>document.write(l10nstrings.strIdleTime)</script></th>
+                                                <th><script>document.write(l10nstrings.strModified)</script></th>
+                    </tr>
+                </thead>
+                <tbody id="doclist">
+                </tbody>
+            </table>
+        </div>
+
+        <div id="view2" class="tab-pane table-responsive">
+            <table id="userview" class="tab-pane table table-striped">
+                <thead>
+                    <tr>
+                        <th><script>document.write(l10nstrings.strUserName)</script></th>
+                            <th><script>document.write(l10nstrings.strDocumentNumber)</script></th>
+                    </tr>
+                </thead>
+                <tbody id="userlist">
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
+{% END BLOCK %}
