--- a/loleaflet/admin/adminPermissionSettings.html
+++ b/loleaflet/admin/adminPermissionSettings.html
@@ -1,4 +1,4 @@
-{% block css %}
+{% BLOCK content %}
 <style>
 .material-switch > input[type="checkbox"] {
     display: none;   
@@ -45,8 +45,6 @@
     left: 20px;
 }
 </style>
-{% end block %}
-{% block javascript %}
 <script>
     $(document).ready(function()
         {
@@ -97,106 +95,101 @@
     }
 
     var permission = Admin.PermissionSettings(host);
-    Admin.GlobalFunction(host);
 </script>
-{% end block %}
 
-{% block content %}
-<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-    <form id="mainform">
-        <ul class="nav nav-tabs">
-            <li class="active">
-                <a href="#textTab" data-toggle="tab">
-                    <h4>文字文件</h4>
-                </a>
-            </li>
-            <li>
-                <a href="#spreadsheetTab" data-toggle="tab">
-                    <h4>試算表文件</h4>
-                </a>
-            </li>
-            <li>
-                <a href="#presentationTab" data-toggle="tab">
-                    <h4>簡報文件</h4>
-                </a>
-            </li>
-            <li>
-                <a href="#toolbarTab" data-toggle="tab">
-                    <h4>工具列</h4>
-                </a>
-            </li>
-        </ul>
-        <div class="tab-content">
-            <!-- 文字文件設定 -->
-            <div id="textTab" class="active tab-pane">
-                <input type="hidden" id="text.showfor">
-                <table id='text_showfor' class="table table-bordered table-hover">
-                    <thead>
-                        <tr class="bg-primary">
-                            <th>功能名稱</th><th>Edit</th><th>View</th><th>Readonly</th><th>說明</th>
-                        </tr>
-                    </thead>
-                    <tbody id="text_showfor_list"></tbody>
-                    <tfoot>
-                        <tr>
-                            <td colspan="5" class="text-right"><button type="button" class="btn btn-primary" id="text_showfor_add">新增文字文件選單項目</button></td>
-                        </tr>
-                    </tfoot>
-                </table>
-            </div>
-            <!-- 試算表設定 -->
-            <div id="spreadsheetTab" class="tab-pane">
-                <input type="hidden" id="spreadsheet.showfor">
-                <table id='spreadsheet_showfor' class="table table-bordered table-hover">
-                    <thead>
-                        <tr class="bg-success">
-                            <th>功能名稱</th><th>Edit</th><th>View</th><th>Readonly</th><th>說明</th>
-                        </tr>
-                    </thead>
-                    <tbody id="spreadsheet_showfor_list"></tbody>
-                    <tfoot>
-                        <tr>
-                            <td colspan="5" class="text-right"><button type="button" class="btn btn-primary" id="spreadsheet_showfor_add">新增試算表選單項目</button></td>
-                        </tr>
-                    </tfoot>
-                </table>
-            </div>
-            <!-- 簡報設定 -->
-            <div id="presentationTab" class="tab-pane">
-                <input type="hidden" id="presentation.showfor">
-                <table id='spreadsheet_showfor' class="table table-bordered table-hover">
-                    <thead>
-                        <tr class="bg-warning">
-                            <th>功能名稱</th><th>Edit</th><th>View</th><th>Readonly</th><th>說明</th>
-                        </tr>
-                    </thead>
-                    <tbody id="presentation_showfor_list"></tbody>
-                    <tfoot>
-                        <tr>
-                            <td colspan="5" class="text-right"><button type="button" class="btn btn-primary" id="presentation_showfor_add">新增簡報選單項目</button></td>
-                        </tr>
-                    </tfoot>
-                </table>
-            </div>
-            <!-- 工具列設定 -->
-            <div id="toolbarTab" class="tab-pane">
-                <input type="hidden" id="toolbar.showfor">
-                <table id='toolbar_showfor' class="table table-bordered table-hover">
-                    <thead>
-                        <tr class="bg-warning">
-                            <th>功能名稱</th><th>Edit</th><th>說明</th>
-                        </tr>
-                    </thead>
-                    <tbody id="toolbar_showfor_list"></tbody>
-                    <tfoot>
-                        <tr>
-                            <td colspan="5" class="text-right"><button type="button" class="btn btn-primary" id="toolbar_showfor_add">新增工具列項目</button></td>
-                        </tr>
-                    </tfoot>
-                </table>
-            </div>
+<form id="mainform">
+    <ul class="nav nav-tabs">
+        <li class="active">
+            <a href="#textTab" data-toggle="tab">
+                <h4>文字文件</h4>
+            </a>
+        </li>
+        <li>
+            <a href="#spreadsheetTab" data-toggle="tab">
+                <h4>試算表文件</h4>
+            </a>
+        </li>
+        <li>
+            <a href="#presentationTab" data-toggle="tab">
+                <h4>簡報文件</h4>
+            </a>
+        </li>
+        <li>
+            <a href="#toolbarTab" data-toggle="tab">
+                <h4>工具列</h4>
+            </a>
+        </li>
+    </ul>
+    <div class="tab-content">
+        <!-- 文字文件設定 -->
+        <div id="textTab" class="active tab-pane">
+            <input type="hidden" id="text.showfor">
+            <table id='text_showfor' class="table table-bordered table-hover">
+                <thead>
+                    <tr class="bg-primary">
+                        <th>功能名稱</th><th>Edit</th><th>View</th><th>Readonly</th><th>說明</th>
+                    </tr>
+                </thead>
+                <tbody id="text_showfor_list"></tbody>
+                <tfoot>
+                    <tr>
+                        <td colspan="5" class="text-right"><button type="button" class="btn btn-primary" id="text_showfor_add">新增文字文件選單項目</button></td>
+                    </tr>
+                </tfoot>
+            </table>
         </div>
-    </form>
-    <div><button class="btn btn-info pull-right" id="saveConfig" disabled><strong>更新界面設定</strong></button></div>
-</div>
-{% end block %}
+        <!-- 試算表設定 -->
+        <div id="spreadsheetTab" class="tab-pane">
+            <input type="hidden" id="spreadsheet.showfor">
+            <table id='spreadsheet_showfor' class="table table-bordered table-hover">
+                <thead>
+                    <tr class="bg-success">
+                        <th>功能名稱</th><th>Edit</th><th>View</th><th>Readonly</th><th>說明</th>
+                    </tr>
+                </thead>
+                <tbody id="spreadsheet_showfor_list"></tbody>
+                <tfoot>
+                    <tr>
+                        <td colspan="5" class="text-right"><button type="button" class="btn btn-primary" id="spreadsheet_showfor_add">新增試算表選單項目</button></td>
+                    </tr>
+                </tfoot>
+            </table>
+        </div>
+        <!-- 簡報設定 -->
+        <div id="presentationTab" class="tab-pane">
+            <input type="hidden" id="presentation.showfor">
+            <table id='spreadsheet_showfor' class="table table-bordered table-hover">
+                <thead>
+                    <tr class="bg-warning">
+                        <th>功能名稱</th><th>Edit</th><th>View</th><th>Readonly</th><th>說明</th>
+                    </tr>
+                </thead>
+                <tbody id="presentation_showfor_list"></tbody>
+                <tfoot>
+                    <tr>
+                        <td colspan="5" class="text-right"><button type="button" class="btn btn-primary" id="presentation_showfor_add">新增簡報選單項目</button></td>
+                    </tr>
+                </tfoot>
+            </table>
+        </div>
+        <!-- 工具列設定 -->
+        <div id="toolbarTab" class="tab-pane">
+            <input type="hidden" id="toolbar.showfor">
+            <table id='toolbar_showfor' class="table table-bordered table-hover">
+                <thead>
+                    <tr class="bg-warning">
+                        <th>功能名稱</th><th>Edit</th><th>說明</th>
+                    </tr>
+                </thead>
+                <tbody id="toolbar_showfor_list"></tbody>
+                <tfoot>
+                    <tr>
+                        <td colspan="5" class="text-right"><button type="button" class="btn btn-primary" id="toolbar_showfor_add">新增工具列項目</button></td>
+                    </tr>
+                </tfoot>
+            </table>
+        </div>
+    </div>
+</form>
+<div><button class="btn btn-info pull-right" id="saveConfig" disabled><strong>更新界面設定</strong></button></div>
+{% END BLOCK %}
