--- a/loleaflet/admin/adminSettings.html
+++ b/loleaflet/admin/adminSettings.html
@@ -1,4 +1,4 @@
-{% block javascript %}
+{% BLOCK content %}
 <script>
     if (window.location.protocol == "https:") {
         host = 'wss://' + window.location.host + '%SERVICE_ROOT%/lool/adminws/'
@@ -9,40 +9,38 @@
 
     Admin.Settings(host);
 </script>
-{% end block %}
-{% block content %}
-<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-    <h1 class="page-header"><script>document.write(l10nstrings.strSettings)</script></h1>
-        <form id="admin_settings">
-            <label for="mem_stats_size"><script>document.write(l10nstrings.strMemoryStatsCachesize)</script>
-            </label>
-            <input type="text" id="mem_stats_size" name="Memory Stats Size"><br/>
-            <label for="mem_stats_interval"><script>document.write(l10nstrings.strMemoryStatsInterval)</script>
-            </label>
-            <input type="text" id="mem_stats_interval" name="Memory Stats Interval"><br/>
-            <label for="cpu_stats_size">
-                <script>document.write(l10nstrings.strCpuStatsCachesize)</script>
-            </label>
-            <input type="text" id="cpu_stats_size" name="Cpu Stats Size"><br/>
-            <label for="cpu_stats_interval">
-                <script>document.write(l10nstrings.strCpuStatsInterval)</script>
-            </label>
-            <input type="text" id="cpu_stats_interval" name="Cpu Stats Interval"><br/>
-            <label for="limit_virt_mem_mb">
-                <script>document.write(l10nstrings.strLimitVirtMemMb)</script>
-            </label>
-            <input type="text" id="limit_virt_mem_mb" name="Max Document Virtual Memory MB"><br/>
-            <label for="limit_stack_mem_kb">
-                <script>document.write(l10nstrings.strLimitStackMemKb)</script>
-            </label>
-            <input type="text" id="limit_stack_mem_kb" name="Max Document Stack Memory Kb"><br/>
-            <label for="limit_file_size_mb">
-                <script>document.write(l10nstrings.strLimitFileSizeMb)</script>
-            </label>
-            <input type="text" id="limit_file_size_mb" name="Max File Write Size Mb"><br/>
-            <script>document.write('<input type="submit" value="' + l10nstrings.strSave + '"/><br/>')</script>
-        </form>
-        <br />
-        <input id="btnShutdown" type="submit" value="Shutdown"/>
-</div>
-{% end block %}
+<h1 class="page-header">
+    <script>document.write(l10nstrings.strSettings)</script>
+</h1>
+<form id="admin_settings">
+    <label for="mem_stats_size"><script>document.write(l10nstrings.strMemoryStatsCachesize)</script>
+    </label>
+    <input type="text" id="mem_stats_size" name="Memory Stats Size"><br/>
+    <label for="mem_stats_interval"><script>document.write(l10nstrings.strMemoryStatsInterval)</script>
+    </label>
+    <input type="text" id="mem_stats_interval" name="Memory Stats Interval"><br/>
+    <label for="cpu_stats_size">
+        <script>document.write(l10nstrings.strCpuStatsCachesize)</script>
+    </label>
+    <input type="text" id="cpu_stats_size" name="Cpu Stats Size"><br/>
+    <label for="cpu_stats_interval">
+        <script>document.write(l10nstrings.strCpuStatsInterval)</script>
+    </label>
+    <input type="text" id="cpu_stats_interval" name="Cpu Stats Interval"><br/>
+    <label for="limit_virt_mem_mb">
+        <script>document.write(l10nstrings.strLimitVirtMemMb)</script>
+    </label>
+    <input type="text" id="limit_virt_mem_mb" name="Max Document Virtual Memory MB"><br/>
+    <label for="limit_stack_mem_kb">
+        <script>document.write(l10nstrings.strLimitStackMemKb)</script>
+    </label>
+    <input type="text" id="limit_stack_mem_kb" name="Max Document Stack Memory Kb"><br/>
+    <label for="limit_file_size_mb">
+        <script>document.write(l10nstrings.strLimitFileSizeMb)</script>
+    </label>
+    <input type="text" id="limit_file_size_mb" name="Max File Write Size Mb"><br/>
+    <script>document.write('<input type="submit" value="' + l10nstrings.strSave + '"/><br/>')</script>
+</form>
+<br />
+<input id="btnShutdown" type="submit" value="Shutdown"/>
+{% END BLOCK %}
