--- a/loleaflet/admin/adminSoftwareUpgrade.html
+++ b/loleaflet/admin/adminSoftwareUpgrade.html
@@ -1,4 +1,4 @@
-{% block javascript %}
+{% BLOCK content %}
 <script>
     if (window.location.protocol == "https:") {
         host = 'wss://' + window.location.host + '%SERVICE_ROOT%/lool/adminws/'
@@ -7,44 +7,40 @@
         host = 'ws://' + window.location.host + '%SERVICE_ROOT%/lool/adminws/'
     }
 
-    Admin.GlobalFunction(host);
     Admin.SoftwareUpgrade(host);
 </script>
-{% end block%}
-{% block content %}
-<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-    <h4 class="page-header">上傳升級檔案</h4>
-    <div class="row"><!-- row begin -->
-        <div class="col-md-8">
-            <div class="input-group">
-                <label class="input-group-btn">
-                    <span class="btn btn-primary">
-                        瀏覽檔案(.rpm/.zip/.tar.gz)<input type="file" id="filename" style="display: none;" accept=".rpm,.zip, .tar.gz">
-                    </span>
-                </label>
-                <input type="text" class="form-control" id="filename-disp" readonly>
+
+<h4 class="page-header">上傳升級檔案</h4>
+<div class="row"><!-- row begin -->
+    <div class="col-md-8">
+        <div class="input-group">
+            <label class="input-group-btn">
+                <span class="btn btn-primary">
+                    瀏覽檔案(.rpm/.zip/.tar.gz)<input type="file" id="filename" style="display: none;" accept=".rpm,.zip, .tar.gz">
+                </span>
+            </label>
+            <input type="text" class="form-control" id="filename-disp" readonly>
+        </div>
+    </div>
+    <div class="col-md-4">
+        <input type="button" class="btn btn-success" id="upload" value="上傳" disabled>
+    </div>
+</div><!-- row end -->
+<!-- 上傳進度條 -->
+<div class="row" id="progress" style="margin-top:20px;display:none;"><!-- row begin -->
+    <div class="col-md-8">
+        <p><b>上傳進度：</b></p>
+        <div class="progress">
+            <div class="progress-bar progress-bar-info" id="progressbar" role="progressbar" aria-valuenow="0"
+                                                                                            aria-valuemin="0" aria-valuemax="100">
             </div>
         </div>
-        <div class="col-md-4">
-            <input type="button" class="btn btn-success" id="upload" value="上傳" disabled>
-        </div>
-    </div><!-- row end -->
-    <!-- 上傳進度條 -->
-    <div class="row" id="progress" style="margin-top:20px;display:none;"><!-- row begin -->
-        <div class="col-md-8">
-            <p><b>上傳進度：</b></p>
-            <div class="progress">
-                <div class="progress-bar progress-bar-info" id="progressbar" role="progressbar" aria-valuenow="0"
-                                                                                                aria-valuemin="0" aria-valuemax="100">
-                </div>
-            </div>
-        </div>
-    </div><!-- row end -->
-    <!-- 升級訊息視窗 -->
-    <div class="row" id="work-area" style="display:none;"><!-- row begin -->
-        <div class="col-md-8">
-            <pre id="message-area" style="width:100%; height:60vh; color:#ffffff; background-color:#000000"></pre>
-        </div>
-    </div><!-- row end -->
-</div>
-{% end block %}
+    </div>
+</div><!-- row end -->
+<!-- 升級訊息視窗 -->
+<div class="row" id="work-area" style="display:none;"><!-- row begin -->
+    <div class="col-md-8">
+        <pre id="message-area" style="width:100%; height:60vh; color:#ffffff; background-color:#000000"></pre>
+    </div>
+</div><!-- row end -->
+{% END BLOCK %}
