--- a/loleaflet/admin/adminViewLog.html
+++ b/loleaflet/admin/adminViewLog.html
@@ -1,4 +1,4 @@
-{% block javascript %}
+{% BLOCK content %}
 <script>
     if (window.location.protocol == "https:") {
         host = 'wss://' + window.location.host + '%SERVICE_ROOT%/lool/adminws/'
@@ -7,13 +7,9 @@
         host = 'ws://' + window.location.host + '%SERVICE_ROOT%/lool/adminws/'
     }
 
-    Admin.GlobalFunction(host);
     Admin.ViewLog(host);
 </script>
-{% end block %}
-{% block content %}
-<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-    <h4 class="page-header">日誌內容<button class="btn btn-primary pull-right" id="Pause"><strong>暫停</strong></button></h4>
-    <pre id="log" style="width:100%; height:75vh; background-color:#000000;color:#ffffff;"></pre>
-</div>
-{% end block %}
+
+<h4 class="page-header">日誌內容<button class="btn btn-primary pull-right" id="Pause"><strong>暫停</strong></button></h4>
+<pre id="log" style="width:100%; height:75vh; background-color:#000000;color:#ffffff;"></pre>
+{% END BLOCK %}
