調整 admin 的版面

--- a/loleaflet/admin/adminBase.html
+++ b/loleaflet/admin/adminBase.html
@@ -79,7 +79,7 @@
             <div class="row">
                 <div class="col-sm-3 col-md-2 sidebar">
                     <ul class="nav nav-sidebar">
-                        <li class="text-center">
+                        <li class="bg-primary">
                             OxOOL 管理列表
                         </li>
                         <li id="admin">
@@ -100,8 +100,7 @@
                         <li id="adminSoftwareUpgrade">
                             <a href="adminSoftwareUpgrade.html">軟體升級</a>
                         </li>
-                        <li class="nav-divider"></li>
-                        <li id="module_list" class="text-center">
+                        <li id="module_list" class="bg-primary">
                             模組列表
                         </li>
                     </ul>
