實作模組 fork 終結條件＆調整管理頁面 CSS
1. 修正 oxoolmodule 介面
2. 在 onDisconnect 新增 EXIT 條件

--- a/loleaflet/admin/adminBase.html
+++ b/loleaflet/admin/adminBase.html
@@ -30,7 +30,7 @@
                 {
                     for (module in module_list)
                     {
-                        var a_template = `<li><a class="text-primary" href="${module_list[module]}">${module_list[module]}</a></li>`;
+                        var a_template = `<li id="${module_list[module]}"><a class="text-primary" href="${module_list[module]}">${module_list[module]}</a></li>`;
                         $("#module_list").after(a_template);
                     }
 
