--- a/loleaflet/admin/adminBase.html
+++ b/loleaflet/admin/adminBase.html
@@ -103,6 +103,9 @@
                         <li id="module_list" class="bg-primary">
                             模組列表
                         </li>
+                        <li id="adminModule">
+                            <a href="adminModule.html">產品資訊</a>
+                        </li>
                     </ul>
                 </div>
                 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
