將陣列一律固定為四位數，不足部份前面補零，如：a[0000], a[0001]...
因為設定的資料中有陣列，原先依照 a[0], a[1]...沒有問題，
但陣列超過10個後，送到 Server 端還原成 Json 格式，
會變成如下排列：
a[0], a[10], a[1], a[2]...排列，這樣造成a[0]之後不是預期的a[1]，
Poco Config.set 就會出錯，只好在組成陣列前，將 index，
固定成前置補零的格式，以符合預期的排序。

--- a/loleaflet/admin/adminConfigSettings.html
+++ b/loleaflet/admin/adminConfigSettings.html
@@ -65,11 +65,13 @@
                             var arr = document.getElementsByClassName(id + '[]');
                             for (var j = 0 ; j < arr.length ; j++)
                             {
-                                json[id + '[' + j + ']'] = arr[j].textContent;
+                                var pad = '0000';
+                                var zj = (pad + j).slice(-pad.length);
+                                json[id + '[' + zj + ']'] = arr[j].textContent;
                                 var allow = arr[j].attributes.allow;
                                 if (typeof allow != 'undefined')
                                 {
-                                    json[id + '[' + j + '][@allow]'] = allow.value;
+                                    json[id + '[' + zj + '][@allow]'] = allow.value;
                                 }
                             }
                             continue;
