--- a/loleaflet/admin/adminViewLog.html
+++ b/loleaflet/admin/adminViewLog.html
@@ -1,15 +1,3 @@
-{% BLOCK content %}
-<script>
-    if (window.location.protocol == "https:") {
-        host = 'wss://' + window.location.host + '%SERVICE_ROOT%/lool/adminws/'
-    }
-    else {
-        host = 'ws://' + window.location.host + '%SERVICE_ROOT%/lool/adminws/'
-    }
-
-    Admin.ViewLog(host);
-</script>
-
+<script>Admin.ViewLog(host);</script>
 <h4 class="page-header">日誌內容<button class="btn btn-primary pull-right" id="Pause"><strong>暫停</strong></button></h4>
 <pre id="log" style="width:100%; height:75vh; background-color:#000000;color:#ffffff;"></pre>
-{% END BLOCK %}
