--- a/loleaflet/admin/adminAnalytics.html
+++ b/loleaflet/admin/adminAnalytics.html
@@ -1,14 +1,4 @@
-{% BLOCK content %}
-<script>
-    if (window.location.protocol == "https:") {
-        host = 'wss://' + window.location.host + '%SERVICE_ROOT%/lool/adminws/'
-    }
-    else {
-        host = 'ws://' + window.location.host + '%SERVICE_ROOT%/lool/adminws/'
-    }
-
-    var socketAnalytics = Admin.Analytics(host);
-</script>
+<script>Admin.Analytics(host);</script>
 <ul class="nav nav-tabs">
     <li class="active">
         <a href="#memview" data-toggle="tab">
@@ -49,4 +39,3 @@
         </div>
     </div>
 </div>
-{% END BLOCK %}
