--- a/loleaflet/admin/adminSoftwareUpgrade.html
+++ b/loleaflet/admin/adminSoftwareUpgrade.html
@@ -1,15 +1,4 @@
-{% BLOCK content %}
-<script>
-    if (window.location.protocol == "https:") {
-        host = 'wss://' + window.location.host + '%SERVICE_ROOT%/lool/adminws/'
-    }
-    else {
-        host = 'ws://' + window.location.host + '%SERVICE_ROOT%/lool/adminws/'
-    }
-
-    Admin.SoftwareUpgrade(host);
-</script>
-
+<script>Admin.SoftwareUpgrade(host);</script>
 <h4 class="page-header">上傳升級檔案</h4>
 <div class="row"><!-- row begin -->
     <div class="col-md-8">
@@ -43,4 +32,3 @@
         <pre id="message-area" style="width:100%; height:60vh; color:#ffffff; background-color:#000000"></pre>
     </div>
 </div><!-- row end -->
-{% END BLOCK %}
