--- a/loleaflet/admin/admintemplate.html
+++ b/loleaflet/admin/admintemplate.html
@@ -7,26 +7,23 @@
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
         <meta name="description" content=""/>
         <meta name="author" content=""/>
-
-        <title>LibreOffice Online - Admin console</title>
-
-        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-        <!--[if lt IE 9]>
-            <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-            <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-        <![endif]-->
         <link rel="localizations" href="%SERVICE_ROOT%/loleaflet/%VERSION%/l10n/admin-localizations.json" type="application/vnd.oftn.l10n+json"/>
+
+        <title>OxOffice Online - Admin console</title>
         <script src="%SERVICE_ROOT%/loleaflet/%VERSION%/admin-bundle.js"></script>
-        <!--%BRANDING_JS%-->
     </head>
     <body>
-        <script>if (typeof brandProductName !== 'undefined') {l10nstrings.strProductName = brandProductName}</script>
-        <script>document.title = l10nstrings.strProductName + ' - ' + l10nstrings.strAdminConsole</script>
+        <!--%BRANDING_JS%-->
+        <script>
+            if (typeof brandProductName !== 'undefined') {l10nstrings.strProductName = brandProductName}
+            document.title = l10nstrings.strProductName + ' - ' + l10nstrings.strAdminConsole;
+            var host = (window.location.protocol === 'https:' ? 'wss://': 'ws://') + window.location.host + '%SERVICE_ROOT%/lool/adminws/';
+        </script>
         <script>
             $(document).ready(function(){
                 // Generate module list
-                var module_list = {{MODULE_LIST}};
-                if (module_list) 
+                var module_list = []; //{{MODULE_LIST}};
+                if (module_list)
                 {
                     for (module in module_list)
                     {
@@ -35,7 +32,7 @@
                     }
 
                 }
-                
+
                 // set the current activate navbar-item
                 var href = window.location.href;
                 var url = new URL(href);
@@ -45,14 +42,6 @@
                     var token = href.split("/");
                     var endpoint = token[token.length-1].split(".")[0];
                     $("#" + endpoint).addClass("active");
-                }
-
-
-                if (window.location.protocol == "https:") {
-                    var host = 'wss://' + window.location.host + '%SERVICE_ROOT%/lool/adminws/';
-                }
-                else {
-                    host = 'ws://' + window.location.host + '%SERVICE_ROOT%/lool/adminws/';
                 }
                 Admin.GlobalFunction(host);
             });
@@ -79,9 +68,6 @@
             <div class="row">
                 <div class="col-sm-3 col-md-2 sidebar">
                     <ul class="nav nav-sidebar">
-                        <li class="bg-primary">
-                            OxOOL 管理列表
-                        </li>
                         <li id="admin">
                             <a href="admin.html"><script>document.write(l10nstrings.strOverview);</script> <span class="sr-only"><script>document.write(l10nstrings.strCurrent)</script></span></a>
                         </li>
@@ -93,9 +79,6 @@
                         </li>
                         <li id="adminConfigSettings">
                             <a href="adminConfigSettings.html">系統設定</a>
-                        </li>
-                        <li id="adminPermissionSettings">
-                            <a href="adminPermissionSettings.html">界面設定</a>
                         </li>
                         <li id="adminSoftwareUpgrade">
                             <a href="adminSoftwareUpgrade.html">軟體升級</a>
@@ -112,7 +95,7 @@
                     </ul>
                 </div>
                 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-                    {% BLOCK content %}
+                    <!--%MAIN_CONTENT%-->
                 </div>
             </div>
         </div>
