loleaflet admin 系統配置設定補上未翻譯的訊息

--- a/loleaflet/admin/adminConfigSettings.html
+++ b/loleaflet/admin/adminConfigSettings.html
@@ -451,25 +451,25 @@
         </div>
         <!-- 分隔 -->
         <div class="col-md-4">
-            <label class="form-label" for="ssl.cert_file_path" _="ssl.cert_file_path"></label>
+            <label class="form-label" for="ssl.cert_file_path" _="Certificate file path"></label>
             <input type="text" class="form-control" id="ssl.cert_file_path">
             <div class="form-text" id="ssl.cert_file_path[@desc]"></div>
         </div>
 
         <div class="col-md-4">
-            <label class="form-label" for="ssl.key_file_path" _="ssl.key_file_path"></label>
+            <label class="form-label" for="ssl.key_file_path" _="Private key file path"></label>
             <input type="text" class="form-control" id="ssl.key_file_path">
             <div class="form-text" id="ssl.key_file_path[@desc]"></div>
         </div>
 
         <div class="col-md-4">
-            <label class="form-label" for="ssl.ca_file_path" _="ssl.ca_file_path"></label>
+            <label class="form-label" for="ssl.ca_file_path" _="CA file path"></label>
             <input type="text" class="form-control" id="ssl.ca_file_path">
             <div class="form-text" id="ssl.ca_file_path[@desc]"></div>
         </div>
         <!-- 分隔 -->
         <div class="col-md-12">
-            <label class="form-label" for="ssl.cipher_list" _="Cipher suite"></label>
+            <label class="form-label" for="ssl.cipher_list" _="Cipher list"></label>
             <input type="text" class="form-control" id="ssl.cipher_list">
             <div class="form-text" id="ssl.cipher_list[@desc]"></div>
         </div>
