admin: 後台管理→系統配置，新增浮水印字型及顏色設定。

--- a/loleaflet/admin/adminConfigSettings.html
+++ b/loleaflet/admin/adminConfigSettings.html
@@ -572,6 +572,16 @@
             <input type="number" class="form-control" id="watermark.angle" min="0" step="1" max="360">
             <div class="form-text" id="watermark.angle[@desc]"></div>
         </div>
+        <div class="col-md-8">
+            <label class="form-label" for="watermark.font" _="Font"></label>
+            <input type="text" class="form-control" id="watermark.font">
+            <div class="form-text" id="watermark.font[@desc]"></div>
+        </div>
+        <div class="col-md-4">
+            <label class="form-label" for="watermark.color" _="Color"></label>
+            <input type="color" class="form-control" id="watermark.color">
+            <div class="form-text" id="watermark.color[@desc]"></div>
+        </div>
         <div class="col-md-12">
             <label class="form-label" for="watermark.text" _="Text"></label>
             <textarea type="text" class="form-control" id="watermark.text" rows="3"></textarea>
